<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Full_Name"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
         />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_output"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Phone_Number"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone_output"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/email_output"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/address_output"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/picture"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/picture_output"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/web_output"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/birthday_output"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/preferred_hour"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/time_output"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/preferred_day"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/days_output"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


</LinearLayout>


